tests/snapshots/parser__function_call_return.snap
---
source: tests/parser.rs
expression: statements
---
[
    Function(
        Function {
            name: "test",
            parameters: [],
            body: Block {
                body: [
                    Let {
                        name: "x",
                        value: FunctionCall {
                            name: "test2",
                            args: [],
                        },
                        is_mutable: false,
                    },
                ],
            },
        },
    ),
    Function(
        Function {
            name: "test2",
            parameters: [],
            body: Block {
                body: [],
            },
        },
    ),
]
