tests/snapshots/parser__large_input.snap
---
source: tests/parser.rs
expression: statements
---
[
    Const {
        name: "wow",
        value: Literal(
            Integer(
                3,
            ),
        ),
    },
    Function(
        Function {
            name: "test",
            parameters: [
                "argv",
            ],
            body: Block {
                body: [
                    Let {
                        name: "a",
                        value: Literal(
                            String(
                                "hello",
                            ),
                        ),
                        is_mutable: false,
                    },
                ],
            },
        },
    ),
]
