tests/snapshots/parser__small_input.snap
---
source: tests/parser.rs
expression: statements
---
[
    Const {
        name: "wow",
        value: Literal(
            Integer(
                3,
            ),
        ),
        type_name: None,
    },
    Function(
        Function {
            name: "test",
            parameters: [],
            body: Block {
                body: [],
            },
            return_type_name: None,
        },
    ),
]
